added banner to the header in the layout page

--- a/layout.html
+++ b/layout.html
@@ -58,6 +58,13 @@
         </div>
       </div>
     </header>
+    <div class="banner">
+      <div class="container">
+        <h2>All in good Taste!</h2>
+        <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit  adipisicing elit. <br> Provident consectetur quibusdam perferendis in minima aspernatur, rerum consequatur earum eligendi praesentium voluptatum.</p>
+        <button type="submit" class="btn">Explore</button>
+      </div>
+    </div>
     <main>
       <div class="container">bla bla</div>
     </main>
