--- a/layout.html
+++ b/layout.html
@@ -31,17 +31,22 @@
       href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
   </head>
   <body>
     <header>
       <div class="container">
-        <div class="logo">
+        <div class="logo2">
           <h2>Cafeteria</h2>
+          <i class="bi bi-alarm"></i>
         </div>
-        <nav id="navLinks">
+        <nav id="navLinks2">
           <ul>
             <li class="active">
-              <i class="fa fa-times" onclick="hideMenu()"></i>
+             
             </li>
             <li><a href="#">Home</a></li>
             <li><a href="#">Products</a></li>
@@ -51,7 +56,7 @@
           </ul>
         </nav>
         <div class="profile">
-          <i class="fas fa-list" onclick="showMenu()"></i>
+         
           <img src="" width="100px" />
           <a href="">Admin</a>
           <a href="">Logout</a>
@@ -62,7 +67,7 @@
       <div class="container">
         <h2>All in good Taste!</h2>
         <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit  adipisicing elit. <br> Provident consectetur quibusdam perferendis in minima aspernatur, rerum consequatur earum eligendi praesentium voluptatum.</p>
-        <button type="submit" class="btn">Explore</button>
+        <button type="submit" class="btn2">Explore</button>
       </div>
     </div>
     <main>
@@ -81,41 +86,66 @@
               <img src="images/products/coffee1.png">
               <p class="name">Coffee <i class="fa-solid fa-coffee-beans"></i></p>
               <p class="Price">$2.00</p>
-              <a href="" class="btn">Order Now</a>
+              <a href="" class="btn2">Order Now</a>
             </div>
             <div class="product">
               <img src="images/products/tea.png">
               <p class="name">tea</p>
               <p class="Price">$2.00</p>
-              <a href="" class="btn">Order Now</a>
+              <a href="" class="btn2">Order Now</a>
             </div>
             <div class="product">
               <img src="images/products/cuppochino.png">
               <p class="name">Cuppochinoo</p>
               <p class="Price">$2.00</p>
-              <a href="" class="btn">Order Now</a>
+              <a href="" class="btn2">Order Now</a>
             </div>
             <div class="product">
               <img src="images/products/dessert.png">
               <p class="name">Coffee</p>
               <p class="Price">$2.00</p>
-              <a href="" class="btn">Order Now</a>
+              <a href="" class="btn2">Order Now</a>
             </div>
             <div class="product">
               <img src="images/products/exspresso.png">
               <p class="name">Coffee</p>
               <p class="Price">$2.00</p>
-              <a href="" class="btn">Order Now</a>
+              <a href="" class="btn2">Order Now</a>
             </div>
           </div>
         </div>
         <div class="cart" id="cart">
           <div class="icon" id="icon">
-            <i class="fa-solid fa-cup-togo"></i>
             cart
+         </div>
+         <form action="">
+          <div class="child">
+            <span>Product name</span>
+            <input type="number">
+            <span>Product price</span>
+            <a href="">Remove</a>
+          </div>
+          <div class="child">
+           <span>Product name</span>
+           <input type="number">
+           <span>Product price</span>
+           <a href="">Remove</a>
+         </div>
+         <div class="note">
+           <textarea name="" id=""" rows="5" placeholder="Notes"></textarea>
+           <label for="combo">Room</label>
+           <select name="combo" id="">
+             <option value="comboBox">ComboBox</option>
+             <option value="other">Other</option>
+           </select>
+           <br>
+           <hr>
+           <br>
+           <p>Total Price: </p>
+           <input type="submit" class="btn2">
+         </div>
+         </form>
         </div>
-        </div>
-  
        </div>
     </main>
     <footer>
