--- a/layout.html
+++ b/layout.html
@@ -7,6 +7,8 @@
     <title>Cafeteria | Website</title>
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/b0aafc83bb.js" crossorigin="anonymous"></script>
 
     <!--Google fonts -->
@@ -74,6 +76,12 @@
        <div class="home-user">
         <div class="search">
           <div class="container">
+             <select name="" id="Select" class=""form-select" aria-label="Default select example"">
+              <option selected>Users</option>
+               <option value="">First user</option>
+               <option value="">First user</option>
+               <option value="">First user</option>
+             </select>
              <form action="">
               <input type="text" name="search" id="search">
               <input type="submit" value="Search" id="submit">
